# otel-revenue-manager

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ATTESTATION.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-app.txt  seed.sql
app/: agent.py  config.py  server.py
app/static/: index.html
etl/: LOAD_PROOF.json  SCRAPE_MANIFEST.json  extract.py  load.py  reconcile.py  snapshot.py  transform.py
otel_revenue_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: compute_load_fingerprint.py  load_hosted_db.sh
skills/: CHALLENGE_SKILL.md
skills/as-of-comparison/: SKILL.md
skills/block-concentration/: SKILL.md
skills/cancellation-risk/: SKILL.md
skills/challenge-skill/: SKILL.md
skills/ota-concentration/: SKILL.md
skills/otb-summary/: SKILL.md
skills/pace-vs-last-year/: SKILL.md
skills/pickup-pace/: SKILL.md
skills/segment-mix/: SKILL.md
sql/: schema.sql  views.sql
tests/: conftest.py  test_agent.py  test_etl.py  test_skills.py  test_tools.py
tests/fixtures/: composite_trace.json
tools/: METRIC_DEFINITIONS.md  rm_tools.py
